[gd_scene load_steps=4 format=3 uid="uid://coecltp4sml3t"]

[ext_resource type="Script" path="res://inventory_ui.gd" id="1_erjmy"]

[sub_resource type="Theme" id="Theme_4guy1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4vb2"]
bg_color = Color(0.00960463, 0.00960464, 0.00960463, 0.588235)

[node name="InventoryUI" type="CanvasLayer"]
script = ExtResource("1_erjmy")

[node name="InventoryControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="InventoryBar" type="Panel" parent="InventoryControl"]
layout_mode = 0
offset_right = 636.0
offset_bottom = 88.0
theme = SubResource("Theme_4guy1")
theme_override_styles/panel = SubResource("StyleBoxFlat_y4vb2")

[node name="ItemContainer" type="HBoxContainer" parent="InventoryControl/InventoryBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
